# ogma-optron

./: .env.example  .gitignore  CNAME  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: cli.py  config.py  main.py
backend/app/agents/: base.py  code_agent.py  manager.py  planner.py  report_agent.py  visual_analyzer.py
backend/app/api/: agents.py  analyze.py  chat.py  clawbridge.py  intent.py  repo_index.py  reports.py  sessions.py  task_graph.py  upload.py  workflows.py
backend/app/clawbridge/: run_store.py  workspace_scanner.py  wrapper.py
backend/app/gitctx/: diff.py
backend/app/intent/: classifier.py
backend/app/providers/: base.py  hf_qwen_vl.py
backend/app/repo_index/: __init__.py  chunker.py  embedder.py  store.py
backend/app/runtime/: executor.py  task_graph_templates.py
backend/app/schemas/: __init__.py  agent.py  asset.py  chat.py  clawbridge.py  intent.py  observation.py  repo_index.py  report.py  task_graph.py  workflow.py
backend/app/services/: chat_service.py  file_store.py  sqlite_store.py  workflow_service.py
backend/app/vision/: ocr.py
backend/tests/: conftest.py  test_clawbridge_safety.py  test_cli.py  test_file_store.py  test_gitctx.py  test_intent_classifier_normalize.py  test_repo_index.py  test_schemas.py  test_sqlite_store.py  test_task_graph_templates.py  test_workflow.py  test_workspace_scanner.py
benchmarks/: eval_2026-05-23.json  eval_2026-05-23.md
docs/: architecture.md  clawbridge.md  cli.md  git-aware-review.md  providers.md  repo-intelligence.md  roadmap.md  (+2 more)
(+16 files in other folders)
