[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogma-optron"
version = "0.2.0"
description = "Open-source visual task understanding and agent runtime. Drop a screenshot, get a markdown report."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "OGMA" }]
keywords = [
    "ai",
    "agent",
    "agent-runtime",
    "vision",
    "multimodal",
    "qwen",
    "llm",
    "fastapi",
    "open-source",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "pillow>=10.4",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
    "rapidocr-onnxruntime>=1.3",
    "fastembed>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.6",
]

[project.scripts]
optron = "app.cli:main"

[project.urls]
Homepage = "https://github.com/berkmec/ogma-optron"
Repository = "https://github.com/berkmec/ogma-optron"
Issues = "https://github.com/berkmec/ogma-optron/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]
